[tool.poetry]
name = "PDF-Tool"
version = "0.1.0"
description = "A PDF-Reader and tool capable of splitting, merging, rotating PDF files."
authors = ["Martin.Heinrich <75615821+martinheinrich2@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pyside6 = "^6.6.0"
pypdf = "^3.17.1"
pyinstaller = "^6.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

