[tool.poetry]
name = "PDF-Tool"
version = "0.1.2"
description = "A PDF-Reader and tool capable of splitting, merging, rotating PDF files."
authors = ["Martin.Heinrich <75615821+martinheinrich2@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pyside6 = "^6.8.0.2"
pypdf = "^5.1.0"
pyinstaller = "^6.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

